spec/e2e/operator/add_num_nil.lit
1 + nil # error: [line 1] Runtime error: Undefined operator + for Integer and Nil.
